updated gitignore for more files

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@ staging.properties
 app/dev.properties
 dev.properties
 app/src/staging/google-services.json
+app/src/google-services.json
 app/src/prod/google-services.json
+app/google-services.json
