--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SalesSparrow"
         android:enableOnBackInvokedCallback="true"
+        android:screenOrientation="portrait"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
@@ -32,6 +33,7 @@
 
                 <action android:name="android.intent.action.VIEW" />
                 <data android:scheme="salessparrow" />
+                <data android:scheme="salessparrowdev" />
             </intent-filter>
         </activity>
     </application>
