added accessibilityID to the remaining components

--- a/app/src/staging/AndroidManifest.xml
+++ b/app/src/staging/AndroidManifest.xml
@@ -31,7 +31,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <action android:name="android.intent.action.VIEW" />
-                <data android:scheme="salessparrow" />
+                <data android:scheme="salessparrowdev" />
             </intent-filter>
         </activity>
     </application>
